# EnergyDecoder

./: 2AProjetSqlQuery.sql  CMakeLists.txt  Create_Table_commands.sql  Documentation BDD.docx  Manuel expert.docx  Manuel user.docx  README.md
src/: QEnergyLoggerDecoder.pro  main.cpp  qenergyloggerdecoder.cpp  qenergyloggerdecoder.h
windowsInstaller/: innoSetup_1.0.iss
